# sealci

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yaml
agent/: Cargo.toml  README.md  build.rs  cli
agent/src/: action.rs  actions.rs  agent.rs  cli.rs  container.rs  health.rs  health_service.rs  main.rs  registering_service.rs  scheduler.rs  scheduler_mock.rs  server.rs
agent/src/mock/: health_server.rs  scheduler_mock.rs
api/openapi/controller/: controller.openapi.yaml
api/proto/actions/: actions.proto
api/proto/agent/: actions.proto  artifact.proto  health.proto  jobs.proto  registration.proto
api/proto/scheduler/: agent.proto  controller.proto
api/src/: client.rs  main.rs
client/: Cargo.toml  README.md
client/src/: main.rs  tui.rs
controller/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
controller/.sqlx/: query-1df3e810c7a7c49f81e00579811a59c363a87677ea71cc520f6cb1a1f6483f27.json  query-245a21c4fc0c8d081e9327c36b6a7ba7c04b8d7af353e2e3c156d79f5603ec49.json  query-304d2e2ea66f456b66d39be0d090847ec11453a05a6212623aa35dc6356ca90a.json  query-3b3f78084214f148aa5b33a7344977f71a41bef8c78a98fd6316bec8692888d3.json  query-51ab09375e98f8fd4dfe1f45db2f81dfb154f9984c4b11e2a4aa4b691967721b.json  query-5a98740cbf27671e7dbbc0e97f71332cfbd755890f3cea055f873f614e7b06c9.json  query-5edfc123bc2c314aa8dcc70016966e7c6de208cb9e5eef04088cb0d96c4cebaf.json  query-720cf1920fc45932d7d94d466ecb96b5881806e7df369ec1e9c138f7cfd00642.json  query-83016001970674c68485bee09b95889f167c357a47990a98d0d1b8b78064fbb5.json  query-847ff9f9e5c9a755250bd9e2ac82a3b8b56bc2c2f9cea8f87f702385df8f2b16.json  query-886c23424e0d5deb3e2a532b98e15ce625aba2bb1111672e181280e349c98b39.json  query-a22d5705c8ade0dc6442305f228130313328887f94eb633e99f29bdaa0245753.json  query-b1696f6287519f2854912c9f5c6cf4730b87551a66f916ac9b88e4393a86c856.json  query-bc5de11234567b01b5b5b77db7ac6be7f136806c1b16123ce6fe5a1be195ade3.json  query-be344f3f071d4348859446a3477b16a264905da31ad288dbcd04f42a8cc62365.json  query-c80c3fc8057caac27d0b0f5ecbe2c5500a0448b4ced9b4377a645d4fe6b75d50.json  query-f12bacebb0db57fd3cebcecd8886824baeec0afc8a5372c37a64001b8530bdf3.json  query-f9dea84980d0cb499aacde41ecaa2d88a6c550c6f5758a68638bf76eaf6cc9f0.json
controller/migrations/: 20240826143640_init.sql
controller/src/: env.rs  main.rs  server.rs
controller/src/action/: action_repository.rs  action_service.rs  mod.rs
controller/src/application/: app_context.rs  mod.rs
controller/src/application/ports/: action_service.rs  command_service.rs  mod.rs  pipeline_service.rs  scheduler_service.rs
controller/src/application/services/: action_service.rs  command_service.rs  mod.rs  pipeline_service.rs  scheduler_service_impl.rs
controller/src/command/: command_repository.rs  command_service.rs  mod.rs
controller/src/database/: database.rs  mod.rs  store.rs
controller/src/docs/: mod.rs
controller/src/domain/: mod.rs
controller/src/domain/entities/: action.rs  command.rs  log.rs  mod.rs  pipeline.rs  scheduler.rs
controller/src/domain/repositories/: action_repository.rs  command_repository.rs  log_repository.rs  mod.rs  pipeline_repository.rs
controller/src/domain/services/: mod.rs  scheduler_client.rs
controller/src/health/: handlers.rs
controller/src/infrastructure/: config.rs  mod.rs
controller/src/infrastructure/db/: action_repository.rs  command_repository.rs  mod.rs  pipeline_repository.rs  postgres.rs
controller/src/infrastructure/grpc/: grpc_scheduler_client.rs  mod.rs
controller/src/infrastructure/http/handlers/: mod.rs  pipeline_handler.rs
controller/src/logs/: log_repository.rs  mod.rs
controller/src/parser/: mod.rs  pipe_parser.rs
controller/src/pipeline/: mod.rs  pipeline_controller.rs  pipeline_repository.rs  pipeline_service.rs
controller/src/scheduler/: mod.rs
controller/src/storage/: database.rs
controller/src/tests/: mod.rs  yaml_parser_tests.rs
controller/src/tests/data/: classic_pipeline.yaml  empty_commands_pipeline.yaml  inconsistent_command_indentation.yaml  invalid_pipeline.yaml  invalid_special_characters_pipeline.yaml  missing_actions_pipeline.yaml  unnamed_pipeline.yaml  valid_special_characters_pipeline.yaml
docs/: controller.md
docs/arch/: agent.md  controller.md  lexicon.md  monitor.md  scheduler.md
monitor/: .env  Cargo.toml  Dockerfile  README.md  actions.yaml  config.yaml  docker-compose.yaml
monitor/actions/: actions.yaml
monitor/configs/: config.yaml
monitor/infra/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
monitor/src/: config.rs  constants.rs  controller.rs  event_listener.rs  external_api.rs  file_utils.rs  main.rs  thread_utils.rs
proto/: action.proto
scheduler/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
scheduler/proto/scheduler/: agent.proto
scheduler/src/: client_register_agent.rs  lib.rs  main.rs
scheduler/src/interfaces/: README.md  agent_interface.rs  client_execution_action.rs  controller_interface.rs  mod.rs
scheduler/src/interfaces/client/: agent_client.rs  mod.rs
scheduler/src/interfaces/server/: agent_interface.rs  controller_interface.rs  mod.rs  scheduler_interface.rs
scheduler/src/logic/: README.md  action_queue_logic.rs  agent_logic.rs  controller_logic.rs  mod.rs
scheduler/src/proto/: mod.rs
scheduler/src/tests/: client_RegisterAgent.rs  client_ReportHealthStatus.rs  client_register_agent.rs
scheduler/tests/: client_RegisterAgent.rs  client_ScheduleAction.rs  client_execution_action.rs  client_register_agent.rs  client_report_health_status.rs  client_schedule_action.rs
scheduler/tests/proto/: mod.rs
src/: main.rs
src/scheduler_server/: agent_interface.rs  controller_interface.rs  mod.rs  server.rs
web-client/: .env  README.md  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web-client/src/: App.tsx  index.css  main.tsx  types.ts
web-client/src/components/: menu.tsx  pipeline.tsx
web-client/src/icons/: github.tsx
web-client/src/pages/: pipeline.tsx  pipelines.tsx
(+3 files in other folders)
