[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13.1"
tokio-stream = { version = "0.1.15", features = ["net"] }
sysinfo = "0.30.13"

[build-dependencies]
tonic-build = "0.12.0"
