[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13.1"
tokio-stream = { version = "0.1.15", features = ["net"] }
sysinfo = "0.30.13"
futures-util = "0.3.30"
lazy_static = "1.5.0"
bollard = "0.17.1"
serde_json = "1.0.125"
serde = "1.0.208"
env_logger = "0.11.5"
log = "0.4.22"
clap = { version = "4.5.16", features = ["derive"] }
url = "2.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "scheduler-mock"
path= "src/mock/scheduler_mock.rs"
