[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.8.0"
async-stream = "0.3.5"
env_logger = "0.11.3"
prost = "0.13.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-stream = "0.1.15"
tonic = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12.0"


[[bin]]
name = "scheduler"
path = "src/server.rs"

[[bin]]
name = "controller"
path = "src/main.rs"
