[package]
name = "controller"
version = "0.1.0"
edition = "2021"
default-run = "controller"

[dependencies]
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "macros",
    "time",
    "postgres",
    "runtime-async-std",
] }
actix-multipart = "0.7.2"
actix-web = "4.8.0"
async-stream = "0.3.5"
clap = { version = "4.5.16", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
prost = "0.13.1"
prost-build = "0.13.1"
scalar-doc = { version = "0.1.0", features = ["actix"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
yaml-rust = "0.4"
thiserror = "1.0.63"
async-trait = "0.1.82"
futures = "0.3.30"
actix-cors = "0.7.0"

[build-dependencies]
tonic-build = "0.12.0"


[[bin]]
name = "scheduler"
path = "src/server.rs"
test = false

[[bin]]
name = "controller"
path = "src/main.rs"
