[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
clap = "4.0"
actix-web = "4.9.0"
actix-multipart = "0.7.2"
env_logger = "0.11.5"
log = "0.4.22"
