[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
clap = "4.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
