[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.12.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client_RegisterAgent"
path = "tests/client_RegisterAgent.rs"

[[bin]]
name = "client_ReportHealthStatus"
path = "tests/client_ReportHealthStatus.rs"

[[bin]]
name = "client_ScheduleAction"
path = "tests/client_ScheduleAction.rs"
