[package]
name = "scheduler"
version = "0.2.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
prost = "0.12.0"
tonic-reflection = "0.11.0"
log = "0.4.22"
env_logger = "0.11.5"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/main.rs"
